--- a/Script_inference.ipynb
+++ b/Script_inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 4,
    "id": "0a8da0f8",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,228 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 30,
+   "id": "28287573",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = sql.connect('Application_prod.db')\n",
+    "data = pd.read_sql(\"\"\"SELECT * \n",
+    "                      FROM Result_data\"\"\", conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "1a9c32ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-12-31 00:00:00\n",
+      "2022-09-01 00:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data.date.max())\n",
+    "print(data.date.min())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e3144908",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logged_model = 'runs:/60cfa1a830df457eb19b304db7987927/model_xgboost'\n",
+    "# Load model as a PyFuncModel.\n",
+    "loaded_model = mlflow.xgboost.load_model(logged_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "9c7efe36",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "172326"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df= data.copy().drop([\"country\",'medium','date',\"index\",\"bounces\"],axis=1).set_index('fullVisitorId')\n",
+    "categorial = df[['channelGrouping','deviceCategory']]\n",
+    "\n",
+    "for i in categorial.columns:\n",
+    "    df[i]= LabelEncoder().fit_transform(df[i])\n",
+    "    df[i].unique()\n",
+    "len(loaded_model.predict_proba(df)[:,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "7b347078",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time_on_site</th>\n",
+       "      <th>pageviews</th>\n",
+       "      <th>channelGrouping</th>\n",
+       "      <th>deviceCategory</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fullVisitorId</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1841398939845413817</th>\n",
+       "      <td>11142</td>\n",
+       "      <td>330.0</td>\n",
+       "      <td>Direct</td>\n",
+       "      <td>desktop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1841398939845413817</th>\n",
+       "      <td>11142</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>Direct</td>\n",
+       "      <td>desktop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1841398939845413817</th>\n",
+       "      <td>11142</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>Direct</td>\n",
+       "      <td>desktop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1841398939845413817</th>\n",
+       "      <td>11142</td>\n",
+       "      <td>144.0</td>\n",
+       "      <td>Direct</td>\n",
+       "      <td>desktop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1841398939845413817</th>\n",
+       "      <td>11142</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>Direct</td>\n",
+       "      <td>desktop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9188970518717118040</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Direct</td>\n",
+       "      <td>desktop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5292485821672248839</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Direct</td>\n",
+       "      <td>desktop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5539970384252655476</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Direct</td>\n",
+       "      <td>desktop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5896625306031106609</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Direct</td>\n",
+       "      <td>desktop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9208529202780866062</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Direct</td>\n",
+       "      <td>desktop</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>172326 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     time_on_site  pageviews channelGrouping deviceCategory\n",
+       "fullVisitorId                                                              \n",
+       "1841398939845413817         11142      330.0          Direct        desktop\n",
+       "1841398939845413817         11142       59.0          Direct        desktop\n",
+       "1841398939845413817         11142       55.0          Direct        desktop\n",
+       "1841398939845413817         11142      144.0          Direct        desktop\n",
+       "1841398939845413817         11142       67.0          Direct        desktop\n",
+       "...                           ...        ...             ...            ...\n",
+       "9188970518717118040             0        1.0          Direct        desktop\n",
+       "5292485821672248839             0        1.0          Direct        desktop\n",
+       "5539970384252655476             0        1.0          Direct        desktop\n",
+       "5896625306031106609             0        1.0          Direct        desktop\n",
+       "9208529202780866062             0        1.0          Direct        desktop\n",
+       "\n",
+       "[172326 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "59845e40",
    "metadata": {},
    "outputs": [
@@ -28,8 +249,7 @@
       "---------------------------------------------------------------------------------\n",
       "---------------------------------------------------------------------------------\n",
       "---------------------------------------------------------------------------------\n",
-      "Data existing wait to compare\n",
-      "New Fresh Run append\n"
+      "first Run of infering creating table\n"
      ]
     }
    ],
@@ -45,40 +265,37 @@
     "\n",
     "today_date = datetime.strptime(date,\"%Y%m%d\")\n",
     "last_date = today_date - timedelta(days=7)\n",
-    "focus_data = data.copy()[data['date'].between(last_date,today_date)]\n",
-    "\n",
+    "#focus_data = data.copy()[data['date'].between(last_date,today_date)]\n",
+    "focus_data= data.copy()\n",
     "print(\"---------------------------------------------------------------------------------\")\n",
     "\n",
-    "df = focus_data.set_index('fullVisitorId')\n",
-    "df = df.copy()[df[\"country\"].isin([\"United States\", \"France\", \n",
-    "                                                \"India\", \"China\", \"Germany\",\n",
-    "                                                \"Canada\", \"(not set)\"])]\n",
+    "df = focus_data.set_index('fullVisitorId').drop([\"country\",'medium','date',\"index\",\"bounces\"],axis=1)\n",
     "#change categorial columns\n",
-    "categorial = df[['channelGrouping','deviceCategory', 'country']]\n",
+    "\n",
+    "categorial = df[['channelGrouping','deviceCategory']]\n",
     "\n",
     "for i in categorial.columns:\n",
     "    df[i]= LabelEncoder().fit_transform(df[i])\n",
     "    df[i].unique()\n",
     "    \n",
-    "df = df.drop(['medium','date',\"index\"], axis= 1)\n",
     "df = df.dropna(axis=0)\n",
     "\n",
     "print(\"---------------------------------------------------------------------------------\")\n",
     "\n",
-    "logged_model = 'runs:/1489eb854fb249f388e3404ab0b9fef4/model_xgboost'\n",
+    "logged_model = 'runs:/60cfa1a830df457eb19b304db7987927/model_xgboost'\n",
     "# Load model as a PyFuncModel.\n",
-    "loaded_model = mlflow.pyfunc.load_model(logged_model)\n",
+    "loaded_model = mlflow.xgboost.load_model(logged_model)\n",
     "# Predict on a Pandas DataFrame.\n",
-    "result = loaded_model.predict(pd.DataFrame(df))\n",
+    "result = loaded_model.predict(df)\n",
+    "result_proba = loaded_model.predict_proba(df)[:,1]\n",
     "\n",
     "print(\"---------------------------------------------------------------------------------\")\n",
     "\n",
-    "data_result = focus_data.copy()[focus_data.country.isin([\"United States\", \"France\", \n",
-    "                                                \"India\", \"China\", \"Germany\",\n",
-    "                                                \"Canada\", \"(not set)\"])].dropna()\n",
+    "data_result = focus_data.copy().dropna(axis=0)\n",
     "data_result['Predict'] = result\n",
+    "data_result['Predict_proba']= result_proba\n",
     "\n",
-    "result_to_save = data_result[[\"index\",\"fullVisitorId\",\"date\",\"Predict\"]]\n",
+    "result_to_save = data_result[[\"index\",\"fullVisitorId\",\"date\",\"Predict\",\"Predict_proba\"]]\n",
     "\n",
     "\n",
     "print(\"---------------------------------------------------------------------------------\")\n",
@@ -107,7 +324,17 @@
     "except:\n",
     "    print(\"first Run of infering creating table\")\n",
     "    \n",
-    "    result_to_save.to_sql(\"Result_data\",conn, if_exists =\"append\",index=False)\n"
+    "    result_to_save.to_sql(\"Result_data\",conn, if_exists =\"replace\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30d79932",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = pd."
    ]
   },
   {
@@ -257,15 +484,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 27,
    "id": "2c54d331",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Table dropped... \n"
+     "ename": "OperationalError",
+     "evalue": "no such table: Result_data",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_11308\\3213892820.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;31m#Doping EMPLOYEE table if already exists\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[0mcursor\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"DROP TABLE Result_data\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Table dropped... \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mOperationalError\u001b[0m: no such table: Result_data"
      ]
     }
    ],
