--- a/E1_notebook_EDA_best.ipynb
+++ b/E1_notebook_EDA_best.ipynb
@@ -5019,7 +5019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1457b6a",
+   "id": "06526bdb",
    "metadata": {},
    "source": [
     "```\n",
@@ -5065,7 +5065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 1,
    "id": "0d51156a",
    "metadata": {},
    "outputs": [
@@ -6031,13 +6031,7 @@
       "[899]\tvalidation_0-logloss:0.35469\tvalidation_1-logloss:0.36589\n",
       "[900]\tvalidation_0-logloss:0.35461\tvalidation_1-logloss:0.36583\n",
       "[901]\tvalidation_0-logloss:0.35453\tvalidation_1-logloss:0.36576\n",
-      "[902]\tvalidation_0-logloss:0.35446\tvalidation_1-logloss:0.36570\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[902]\tvalidation_0-logloss:0.35446\tvalidation_1-logloss:0.36570\n",
       "[903]\tvalidation_0-logloss:0.35440\tvalidation_1-logloss:0.36566\n",
       "[904]\tvalidation_0-logloss:0.35432\tvalidation_1-logloss:0.36560\n",
       "[905]\tvalidation_0-logloss:0.35425\tvalidation_1-logloss:0.36553\n",
@@ -6371,7 +6365,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "c583c38e",
+   "id": "633d5b30",
    "metadata": {},
    "outputs": [
     {
