--- a/Monitoring.ipynb
+++ b/Monitoring.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "c5ba00cc",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "48fd9a93",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "id": "914da028",
    "metadata": {},
    "outputs": [],
@@ -46,13 +46,13 @@
     "referance_date = \"20220930\"\n",
     "today_date = datetime.strptime(referance_date,\"%Y%m%d\")\n",
     "referance_date_2 = \"20220915\"\n",
-    "last_date = datetime.strptime(date,\"%Y%m%d\")\n",
+    "last_date = datetime.strptime(referance_date_2,\"%Y%m%d\")\n",
     "reference = train.copy()[train['date'].between(referance_date_2,referance_date)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "bc829f5a",
    "metadata": {},
    "outputs": [],
@@ -68,19 +68,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "507ceab5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "max : 2022-09-30 00:00:00, min : 2022-09-15 00:00:00\n",
-      "max : 2022-10-07 00:00:00, min : 2022-09-30 00:00:00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"max : {reference.date.max()}, min : {reference.date.min()}\")\n",
     "print(f\"max : {current.date.max()}, min : {current.date.min()}\")"
@@ -88,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "eccb3c5e",
    "metadata": {},
    "outputs": [],
@@ -99,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "0798346b",
    "metadata": {},
    "outputs": [],
