--- a/E1_notebook_EDA_best.ipynb
+++ b/E1_notebook_EDA_best.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "id": "b54f2f86",
    "metadata": {},
    "outputs": [],
@@ -3468,7 +3468,9 @@
   {
    "cell_type": "markdown",
    "id": "770b2853",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# OneHotEncoder*"
    ]
@@ -3477,7 +3479,9 @@
    "cell_type": "code",
    "execution_count": 60,
    "id": "efaeafed",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "data_bq = pd.read_csv(\"data/bquxjob_4a55ecd5_184c3af4fbe.csv\")"
@@ -3487,7 +3491,9 @@
    "cell_type": "code",
    "execution_count": 61,
    "id": "614ed51a",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -3730,7 +3736,9 @@
    "cell_type": "code",
    "execution_count": 62,
    "id": "ecce49c4",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# df_best_country = df.copy()[df[\"country\"].isin([\"United States\", \"France\", \n",
@@ -3743,7 +3751,9 @@
    "cell_type": "code",
    "execution_count": 63,
    "id": "cd548b24",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -3947,7 +3957,9 @@
    "cell_type": "code",
    "execution_count": 64,
    "id": "0b3eff93",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "df_data_bq[\"target\"]= df_data_bq['will_buy_on_return_visit']\n",
@@ -3958,7 +3970,9 @@
    "cell_type": "code",
    "execution_count": 66,
    "id": "b2c42629",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "data_bq_model= df_data_bq.dropna(axis=0)"
@@ -3969,6 +3983,7 @@
    "execution_count": 67,
    "id": "918675ee",
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -4173,7 +4188,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "befe6fc1",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -4181,7 +4198,9 @@
    "cell_type": "code",
    "execution_count": 68,
    "id": "2513c8d5",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "categorial = data_bq_model[['channelGrouping','deviceCategory', 'country']]"
@@ -4191,7 +4210,9 @@
    "cell_type": "code",
    "execution_count": 72,
    "id": "9f621bb7",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -4215,7 +4236,9 @@
    "cell_type": "code",
    "execution_count": 74,
    "id": "4f045995",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "data_bq_encoded = data_bq_model.copy()"
@@ -4225,7 +4248,9 @@
    "cell_type": "code",
    "execution_count": 75,
    "id": "efa84ca2",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -4263,7 +4288,9 @@
    "cell_type": "code",
    "execution_count": 70,
    "id": "5b937ab7",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "ename": "AttributeError",
@@ -4286,7 +4313,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4ca7bbeb",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -4301,14 +4330,18 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "83b6f0c4",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "807e1b60",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Resample Data (rééquilibre)"
    ]
@@ -4317,7 +4350,9 @@
    "cell_type": "code",
    "execution_count": 127,
    "id": "45a7d581",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "over = SMOTE(sampling_strategy=0.2)\n",
@@ -4331,6 +4366,7 @@
    "execution_count": 128,
    "id": "4d1be1ad",
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -4342,7 +4378,9 @@
    "cell_type": "code",
    "execution_count": 129,
    "id": "70ef2e98",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -4521,7 +4559,9 @@
    "cell_type": "code",
    "execution_count": 130,
    "id": "a42ed5d4",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -4544,7 +4584,9 @@
    "cell_type": "code",
    "execution_count": 131,
    "id": "1fa48e22",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# # define pipeline\n",
@@ -4563,6 +4605,7 @@
    "execution_count": 132,
    "id": "8d9c1716",
    "metadata": {
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [],
@@ -4574,7 +4617,9 @@
    "cell_type": "code",
    "execution_count": 133,
    "id": "2092dcba",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# voir l'intérieur de la pipeline\n",
@@ -4585,7 +4630,9 @@
    "cell_type": "code",
    "execution_count": 134,
    "id": "0a1f388e",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#define model in pipeline\n",
@@ -4596,7 +4643,9 @@
    "cell_type": "code",
    "execution_count": 135,
    "id": "1118de4e",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#Results\n",
@@ -4614,6 +4663,7 @@
    "execution_count": 136,
    "id": "b3c01d32",
    "metadata": {
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [],
@@ -4635,7 +4685,9 @@
   {
    "cell_type": "markdown",
    "id": "0d9017d3",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Dictionnaire des modèles"
    ]
@@ -4644,7 +4696,9 @@
    "cell_type": "code",
    "execution_count": 137,
    "id": "19d1d805",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#Preparation des évaluations avec une fonction\n",
@@ -4661,7 +4715,9 @@
    "cell_type": "code",
    "execution_count": 138,
    "id": "4435896e",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "model_dico = {\"RandomForestClassifier\": RandomForestClassifier(random_state=42),\n",
@@ -4686,6 +4742,7 @@
    "execution_count": 139,
    "id": "ef8d3885",
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -4725,7 +4782,9 @@
    "cell_type": "code",
    "execution_count": 140,
    "id": "48d0dd82",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "normalisation = {'std_scaler' : StandardScaler(),\n",
@@ -4737,7 +4796,9 @@
    "cell_type": "code",
    "execution_count": 141,
    "id": "9db54b23",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -4758,7 +4819,9 @@
    "cell_type": "code",
    "execution_count": 142,
    "id": "b0b0c4c9",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -4836,7 +4899,9 @@
    "cell_type": "code",
    "execution_count": 143,
    "id": "a9a2be3d",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -5092,7 +5157,9 @@
    "cell_type": "code",
    "execution_count": 144,
    "id": "63526e44",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "metrics_df[\"model\"]= model_lst\n",
@@ -5109,7 +5176,9 @@
    "cell_type": "code",
    "execution_count": 145,
    "id": "67be9c17",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -5739,7 +5808,9 @@
    "cell_type": "code",
    "execution_count": 146,
    "id": "b659d199",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "y_true_actu = results[\"RandomForestClassifier_with_minmax_scaler\"]['Actual']"
@@ -5749,7 +5820,9 @@
    "cell_type": "code",
    "execution_count": 147,
    "id": "3cf1cb70",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "y_probability = results[\"RandomForestClassifier_with_minmax_scaler\"]['proba_1']"
@@ -5759,7 +5832,9 @@
    "cell_type": "code",
    "execution_count": 148,
    "id": "b3b3c339",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -6552,7 +6627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0d51156a",
    "metadata": {},
    "outputs": [
