--- a/Monitoring.ipynb
+++ b/Monitoring.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "c5ba00cc",
    "metadata": {},
    "outputs": [],
@@ -18,8 +18,32 @@
     "from evidently.report import Report\n",
     "from evidently.metric_preset import DataDriftPreset\n",
     "\n",
+    "import smtplib as smt\n",
+    "\n",
     "iris_data = datasets.load_iris(as_frame='auto')\n",
     "iris_frame = iris_data.frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7d68b760",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(220, b'2.0.0 Ready to start TLS')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "server = smt.SMTP(\"smtp.gmail.com\",587)\n",
+    "server.starttls()"
    ]
   },
   {
@@ -127,6 +151,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "9ec0e480",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2023, 2, 19, 18, 23, 59, 595645)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime.today()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 61,
    "id": "68086294",
    "metadata": {},
@@ -140,17 +185,29 @@
     }
    ],
    "source": [
+    "\n",
+    "today_d = datetime.today()\n",
+    "\n",
     "if data_drift_report.as_dict()[\"metrics\"][0]['result'][\"dataset_drift\"]:\n",
     "    if (data_drift_report.as_dict()[\"metrics\"][1]['result'][\"drift_by_columns\"][\"pageviews\"]['drift_detected'])| \\\n",
     "    (data_drift_report.as_dict()[\"metrics\"][1]['result'][\"drift_by_columns\"][\"time_on_site\"]['drift_detected']):\n",
-    "        print(\"Send Mail\")\n",
+    "        \n",
+    "        msg = \"The model seem to drift on more than 50% of the model you have to check it.\"\n",
+    "        to= \"welodya@gmail.com\"\n",
+    "        server.sendmail(gmail_user,to,msg)\n",
+    "        \n",
+    "        data_drift_report.save_html(f\"report_drift/report_eviIA_{today_d}.html\")\n",
     "    else: \n",
     "        print(\"Drift but on inconsequent Variable\")\n",
     "else: \n",
     "    if (data_drift_report.as_dict()[\"metrics\"][1]['result'][\"drift_by_columns\"][\"pageviews\"]['drift_detected'])| \\\n",
     "    (data_drift_report.as_dict()[\"metrics\"][1]['result'][\"drift_by_columns\"][\"time_on_site\"]['drift_detected']):\n",
-    "        print(\"Drift on interesting variable\")\n",
-    "        print(\"Send Mail\")\n",
+    "        \n",
+    "        msg = \"The model seem to drift on interesting variable you have to check it.\"\n",
+    "        to= \"welodya@gmail.com\"\n",
+    "        server.sendmail(gmail_user,to,msg)\n",
+    "        \n",
+    "        data_drift_report.save_html(f\"report_drift/report_eviIA_{today_d}.html\")\n",
     "    else:\n",
     "        \n",
     "        print(\"np\")"
